--- a/Part 1/EDA_Cleaning/Data_Cleaning_Decline.ipynb
+++ b/Part 1/EDA_Cleaning/Data_Cleaning_Decline.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,17 +30,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# ------------------------------------Decline Data-----------------------------------------"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +78,7 @@
        "(16131432, 9)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,9 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -210,7 +202,7 @@
        "4          0.0  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +213,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "concatDataReject= concatDataReject[concatDataReject.Risk_Score.notnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -229,19 +232,52 @@
     {
      "data": {
       "text/plain": [
-       "Amount Requested              0\n",
-       "Application Date              0\n",
-       "Loan Title                 1295\n",
-       "Risk_Score              9323593\n",
-       "Debt-To-Income Ratio          0\n",
-       "Zip Code                    293\n",
-       "State                        22\n",
-       "Employment Length             0\n",
-       "Policy Code                 918\n",
+       "array([0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concatDataReject.isnull().sum(axis=1).unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "concatDataReject = concatDataReject[concatDataReject.State.notnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Amount Requested          0\n",
+       "Application Date          0\n",
+       "Loan Title                5\n",
+       "Risk_Score                0\n",
+       "Debt-To-Income Ratio      0\n",
+       "Zip Code                  0\n",
+       "State                     0\n",
+       "Employment Length         0\n",
+       "Policy Code             433\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,35 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def missingzipcode():\n",
-    "    locate = concatDataReject[['Zip Code','id', 'State']]\n",
-    "    Mode = concatDataReject['Zip Code'].mode()[0]\n",
-    "    county= list(locate['State'].unique())\n",
-    "\n",
-    "    for c in county:\n",
-    "        temp = locate[locate['Zip Code'] == c]\n",
-    "        if( temp['Zip Code'].isnull().sum()==0):\n",
-    "            break\n",
-    "        else:\n",
-    "            if(temp.shape == temp[temp.isnull().any(axis=1)].shape ):\n",
-    "                temp['Zip Code'].fillna(Mode, inplace=True)\n",
-    "            else:\n",
-    "                c = temp['Zip Code'].mode()[0]\n",
-    "                temp['Zip Code'].fillna(c, inplace=True)\n",
-    "            locate.loc[locate.Id.isin(temp.Id), ['Zip Code']] = temp[['Zip Code']]\n",
-    "    locate['Zip Code'].fillna(locate['Zip Code'].mode()[0], inplace = True)      \n",
-    "    concatDataReject.loc[concatDataReject.id.isin(locate.id), ['Zip Code']] = locate[['Zip Code']]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -375,6 +392,11 @@
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/Users/sonalichaudhari/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:41: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     }
@@ -420,17 +442,19 @@
     "concatDataReject.loc[concatDataReject['Employment Length']=='n/',['Employment Length']]=0\n",
     "concatDataReject['Employment Length']= concatDataReject['Employment Length'].astype(np.int64)\n",
     "\n",
-    "# Renaming\n",
-    "concatDataReject=concatDataReject.rename(columns = {'Amount Requested':'loan_amnt'})\n",
-    "concatDataReject=concatDataReject.rename(columns = {'Application Date':'application_date'})\n",
-    "concatDataReject=concatDataReject.rename(columns = {'Loan Title':'purpose'})\n",
-    "concatDataReject=concatDataReject.rename(columns = {'Zip Code':'zip_code'}) \n",
-    "concatDataReject=concatDataReject.rename(columns = {'Debt-To-Income Ratio':'dti'})\n",
-    "concatDataReject=concatDataReject.rename(columns = {'Employment Length':'emp_length'})\n",
-    "concatDataReject=concatDataReject.rename(columns = {'Risk_Score':'risk_score'})\n",
-    "concatDataReject=concatDataReject.rename(columns = {'Application Date':'application_date'})\n",
-    "\n",
     "concatDataReject['approval']=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "concatDataReject['State'].fillna('Other',inplace = True)\n",
+    "#concatDataReject['zip_code'].fillna('NA',inplace = True)"
    ]
   },
   {
@@ -441,44 +465,20 @@
    },
    "outputs": [],
    "source": [
-    "concatDataReject['State'].fillna('Other',inplace = True)\n",
-    "concatDataReject['zip_code'].fillna('NA',inplace = True)"
+    "# Renaming\n",
+    "concatDataReject=concatDataReject.rename(columns = {'Amount Requested':'loan_amnt'})\n",
+    "concatDataReject=concatDataReject.rename(columns = {'Application Date':'application_date'})\n",
+    "concatDataReject=concatDataReject.rename(columns = {'Loan Title':'purpose'})\n",
+    "concatDataReject=concatDataReject.rename(columns = {'Zip Code':'zip_code'}) \n",
+    "concatDataReject=concatDataReject.rename(columns = {'Debt-To-Income Ratio':'dti'})\n",
+    "concatDataReject=concatDataReject.rename(columns = {'Employment Length':'emp_length'})\n",
+    "concatDataReject=concatDataReject.rename(columns = {'Risk_Score':'fico'})\n",
+    "concatDataReject=concatDataReject.rename(columns = {'Application Date':'application_date'})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6807839, 9)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "concatDataReject= concatDataReject[concatDataReject.Risk_Score.notnull()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -503,24 +503,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "concatDataReject.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "concatDataReject.loc[concatDataReject['zip_code']=='nan',['zip_code']]='NA'"
    ]
   },
   {
@@ -536,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -544,10 +533,10 @@
     {
      "data": {
       "text/plain": [
-       "(6807839, 14)"
+       "(6720900, 14)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,12 +547,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "concatDataReject=concatDataReject[concatDataReject['risk_score']>300]"
+   ]
   }
  ],
  "metadata": {
