--- a/Part 2/Neural_Networks.ipynb
+++ b/Part 2/Neural_Networks.ipynb
@@ -322,24 +322,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPRegressor(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
+       "       beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "       hidden_layer_sizes=(50, 20, 5), learning_rate='adaptive',\n",
+       "       learning_rate_init=0.001, max_iter=200, momentum=0.9,\n",
+       "       nesterovs_momentum=True, power_t=0.5, random_state=None,\n",
+       "       shuffle=True, solver='adam', tol=0.0001, validation_fraction=0.1,\n",
+       "       verbose=False, warm_start=False)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Creating the model\n",
-    "nn = MLPRegressor(hidden_layer_sizes=(500,100,20),activation='relu',solver='adam',learning_rate='adaptive',verbose=False)\n",
+    "nn = MLPRegressor(hidden_layer_sizes=(50,20,5),activation='relu',solver='adam',learning_rate='adaptive',verbose=False)\n",
     "nn.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.9428393941e-05\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy = nn.score(X_train, y_train)\n",
     "print(accuracy)"
