--- a/Part 2/Random_Forests.ipynb
+++ b/Part 2/Random_Forests.ipynb
@@ -490,14 +490,14 @@
    },
    "outputs": [],
    "source": [
-    "# from sklearn import preprocessing\n",
-    "# label_encoder = preprocessing.LabelEncoder()\n",
-    "# # Converting the categorical data to numeric \n",
-    "# X_train['pur'] = label_encoder.fit_transform(X_train['purpose'])\n",
-    "# X_test['pur'] = label_encoder.fit_transform(X_test['purpose'])\n",
+    "from sklearn import preprocessing\n",
+    "label_encoder = preprocessing.LabelEncoder()\n",
+    "# Converting the categorical data to numeric \n",
+    "X_train['pur'] = label_encoder.fit_transform(X_train['purpose'])\n",
+    "X_test['pur'] = label_encoder.fit_transform(X_test['purpose'])\n",
     "\n",
-    "# X_train['state'] = label_encoder.fit_transform(X_train['State'])\n",
-    "# X_test['state'] = label_encoder.fit_transform(X_test['State'])"
+    "X_train['state'] = label_encoder.fit_transform(X_train['State'])\n",
+    "X_test['state'] = label_encoder.fit_transform(X_test['State'])"
    ]
   },
   {
@@ -516,7 +516,8 @@
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -615,85 +616,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "temp_pd = pd.DataFrame()\n",
-    "temp_pd['labels'] = y_train\n",
-    "temp_pd['dummy_col'] = y_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>labels</th>\n",
-       "      <th>dummy_col</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1148436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1149134</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   labels  dummy_col\n",
-       "0       0    1148436\n",
-       "1       1    1149134"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp_pd.groupby(by='labels').count().reset_index().head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[441285,  51060],\n",
-       "       [ 28260, 464069]])"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "#Compute confusion matrix\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
@@ -798,7 +725,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "temp_pd = pd.DataFrame()\n",
+    "temp_pd['labels'] = y_train\n",
+    "temp_pd['dummy_col'] = y_train\n",
+    "temp_pd.groupby(by='labels').count().reset_index().head()"
+   ]
   }
  ],
  "metadata": {
