--- a/Part 2/Combining_File.ipynb
+++ b/Part 2/Combining_File.ipynb
@@ -18,20 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sonalichaudhari/anaconda/lib/python3.5/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -44,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -67,19 +58,275 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "loan_df=loan_df[['id','loan_amnt', 'purpose', 'risk_score', 'dti','zip_code', 'State', 'emp_length', 'Year', 'Month', 'approval']]\n",
-    "decline_df =decline_df[['id','loan_amnt','purpose', 'risk_score', 'dti','zip_code', 'State', 'emp_length', 'Year', 'Month','approval']]"
+    "loan_df=loan_df[['id','loan_amnt', 'purpose', 'fico', 'dti','zip_code', 'State', 'emp_length', 'Year', 'Month', 'approval']]\n",
+    "decline_df =decline_df[['id','loan_amnt','purpose', 'fico', 'dti','zip_code', 'State', 'emp_length', 'Year', 'Month','approval']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>purpose</th>\n",
+       "      <th>fico</th>\n",
+       "      <th>dti</th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>State</th>\n",
+       "      <th>emp_length</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>approval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>credit_card</td>\n",
+       "      <td>737.0</td>\n",
+       "      <td>27.65</td>\n",
+       "      <td>860</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>car</td>\n",
+       "      <td>742.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>309</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>small_business</td>\n",
+       "      <td>737.0</td>\n",
+       "      <td>8.72</td>\n",
+       "      <td>606</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>other</td>\n",
+       "      <td>692.0</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>917</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>other</td>\n",
+       "      <td>697.0</td>\n",
+       "      <td>17.94</td>\n",
+       "      <td>972</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  loan_amnt         purpose   fico    dti  zip_code State  emp_length  \\\n",
+       "0   1     5000.0     credit_card  737.0  27.65       860    AZ          10   \n",
+       "1   2     2500.0             car  742.0   1.00       309    GA           1   \n",
+       "2   3     2400.0  small_business  737.0   8.72       606    IL          10   \n",
+       "3   4    10000.0           other  692.0  20.00       917    CA          10   \n",
+       "4   5     3000.0           other  697.0  17.94       972    OR           1   \n",
+       "\n",
+       "   Year  Month  approval  \n",
+       "0  2011     12         1  \n",
+       "1  2011     12         1  \n",
+       "2  2011     12         1  \n",
+       "3  2011     12         1  \n",
+       "4  2011     12         1  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loan_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>purpose</th>\n",
+       "      <th>fico</th>\n",
+       "      <th>dti</th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>State</th>\n",
+       "      <th>emp_length</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>approval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>Wedding Covered but No Honeymoon</td>\n",
+       "      <td>693.0</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>481</td>\n",
+       "      <td>NM</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>Consolidating Debt</td>\n",
+       "      <td>703.0</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>10</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>11000.0</td>\n",
+       "      <td>Want to consolidate my debt</td>\n",
+       "      <td>715.0</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>212</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6000.0</td>\n",
+       "      <td>waksman</td>\n",
+       "      <td>698.0</td>\n",
+       "      <td>38.64</td>\n",
+       "      <td>17</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>mdrigo</td>\n",
+       "      <td>509.0</td>\n",
+       "      <td>9.43</td>\n",
+       "      <td>209</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  loan_amnt                           purpose   fico    dti  zip_code  \\\n",
+       "0   1     1000.0  Wedding Covered but No Honeymoon  693.0  10.00       481   \n",
+       "1   2     1000.0                Consolidating Debt  703.0  10.00        10   \n",
+       "2   3    11000.0       Want to consolidate my debt  715.0  10.00       212   \n",
+       "3   4     6000.0                           waksman  698.0  38.64        17   \n",
+       "4   5     1500.0                            mdrigo  509.0   9.43       209   \n",
+       "\n",
+       "  State  emp_length  Year  Month  approval  \n",
+       "0    NM           4  2007      5         0  \n",
+       "1    MA           0  2007      5         0  \n",
+       "2    MD           1  2007      5         0  \n",
+       "3    MA           0  2007      5         0  \n",
+       "4    MD           0  2007      5         0  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decline_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -99,6 +346,15 @@
    "source": [
     "df.to_csv('/Users/sonalichaudhari/Desktop/Combine_Clean_Data.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
