Cluster Csv Models

--- a/Part 1/EDA_Cleaning/Data_Cleaning_Loan.ipynb
+++ b/Part 1/EDA_Cleaning/Data_Cleaning_Loan.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
        "(1646773, 151)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
        "      dtype='object', length=151)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
        "(1646773, 19)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -268,31 +268,29 @@
     {
      "data": {
       "text/plain": [
-       "id                      0\n",
-       "debt_settlement_flag    0\n",
-       "application_type        0\n",
-       "fico_range_low          0\n",
-       "fico_range_high         0\n",
-       "emp_length              0\n",
-       "dti                     0\n",
-       "annual_inc              4\n",
-       "grade                   0\n",
-       "sub_grade               0\n",
-       "int_rate                0\n",
-       "loan_amnt               0\n",
-       "issue_d                 0\n",
-       "purpose                 0\n",
-       "addr_state              0\n",
-       "home_ownership          0\n",
-       "zip_code                0\n",
-       "policy_code             0\n",
-       "term                    0\n",
-       "Year                    0\n",
-       "Month                   0\n",
+       "id                        0\n",
+       "debt_settlement_flag      1\n",
+       "application_type          1\n",
+       "fico_range_low            1\n",
+       "fico_range_high           1\n",
+       "emp_length                1\n",
+       "dti                     358\n",
+       "annual_inc                5\n",
+       "grade                     1\n",
+       "sub_grade                 1\n",
+       "int_rate                  1\n",
+       "loan_amnt                 1\n",
+       "issue_d                   1\n",
+       "purpose                   1\n",
+       "addr_state                1\n",
+       "home_ownership            1\n",
+       "zip_code                  2\n",
+       "policy_code               1\n",
+       "term                      1\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -321,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -352,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -363,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -376,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -394,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -413,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -425,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -437,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -495,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -689,7 +687,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -765,31 +763,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sonalichaudhari/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if __name__ == '__main__':\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loan_df['fico_avg'] = (loan_df['fico_range_high']+loan_df['fico_range_low'])/2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "loan_df['term'] = loan_df['term'].astype(str).map(lambda x: x.rstrip('months'))\n",
+    "loan_df['term'] = loan_df['term'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "loan_df =loan_df[loan_df.dti>-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -797,10 +805,10 @@
     {
      "data": {
       "text/plain": [
-       "(1641240, 22)"
+       "(1640753, 22)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -823,13 +831,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "loan_df[['grade','sub_grade','application_type','addr_state','purpose','home_ownership']]= loan_df[['grade','sub_grade','application_type','addr_state','purpose','home_ownership']].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "loan_df['policy_code'] = loan_df['policy_code'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                        int64\n",
+       "debt_settlement_flag     object\n",
+       "application_type         object\n",
+       "fico_range_low          float64\n",
+       "fico_range_high         float64\n",
+       "emp_length                int64\n",
+       "dti                     float64\n",
+       "annual_inc              float64\n",
+       "grade                    object\n",
+       "sub_grade                object\n",
+       "int_rate                float64\n",
+       "loan_amnt               float64\n",
+       "issue_d                  object\n",
+       "purpose                  object\n",
+       "addr_state               object\n",
+       "home_ownership           object\n",
+       "zip_code                  int64\n",
+       "policy_code             float64\n",
+       "term                      int64\n",
+       "Year                      int64\n",
+       "Month                     int64\n",
+       "fico_avg                float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loan_df.dtypes"
    ]
   },
   {
@@ -841,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -854,18 +917,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "loan_df.to_csv('/Users/sonalichaudhari/Desktop/Loan.csv')"
+    "loan_df.to_csv('/Users/sonalichaudhari/Desktop/Loan.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -873,10 +936,10 @@
     {
      "data": {
       "text/plain": [
-       "(1640755, 23)"
+       "(1640753, 23)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
